# twill

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.PT_BR.md  README.RU.md  README.md  index.html  package.json  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-b19caea7.js  searchindex-ddbb6d70.js  test.rs  test_iced.rs  test_slint.rs  toc-0c33b7f7.js  toc-114ab1d7.js  toc.html
.github/workflows/: ci.yml  deploy-mdbook.yml
assets/: icon.icns
backends/: egui.html  iced.html  index.html  overview.html  slint.html
concepts/: index.html  semantic-tokens.html  state-and-responsive.html  style-builder.html  tokens.html
crates/twill-backend-common/: Cargo.toml  README.md
crates/twill-backend-common/src/: lib.rs
crates/twill-core/: Cargo.toml
crates/twill-core/src/: lib.rs
crates/twill-core/src/style/: layers.rs  mod.rs  presets.rs  state.rs  style.rs  theme.rs
crates/twill-core/src/tokens/: aspect_ratio.rs  blur.rs  cursor.rs  mod.rs  motion.rs  oklch.rs  perspective.rs  semantic.rs  typography.rs
crates/twill-core/src/utilities/: layout.rs  mod.rs  spacing.rs
crates/twill-egui/: Cargo.toml  README.md
crates/twill-egui/src/: lib.rs
crates/twill-iced/: Cargo.toml  README.md
crates/twill-iced/src/: convert.rs  lib.rs
crates/twill-iced/src/widgets/: common.rs  container.rs  conversions.rs  flex.rs  grid.rs  layout.rs  tests.rs
crates/twill-slint/: Cargo.toml  README.md
crates/twill-slint/src/: lib.rs
docs/: README.md  SUMMARY.md  book.toml  package-lock.json  package.json
docs/backends/: README.md  egui.md  iced.md  overview.md  slint.md
docs/concepts/: README.md  components.md  semantic-tokens.md  state-and-responsive.md  style-builder.md  tokens.md
docs/examples/: README.md  arbitrary-values.md  backend-mapping-matrix.md  backends.md  component-recipes.md  demos.md  design-system-module.md  quick-start-card.md  responsive.md  showcase-egui.md  showcase-iced.md  showcase-slint.md  showcase-winit.md  state-variants.md  states.md  style-builder.md  style-composition.md  themes.md  tokens.md
docs/getting-started/: README.md  installation.md  migration-from-0.2.md  quick-start.md
docs/reference/: README.md  public-api.md
examples/: 00_quick_start_card.rs  01_tokens.rs  02_style_builder.rs  03_states.rs  04_responsive.rs  05_semantic_theme.rs  06_arbitrary_values.rs  07_component_recipes.rs  08_style_composition.rs  09_state_variants.rs  10_backend_egui.rs  11_backend_iced.rs  12_backend_slint.rs  13_backend_mapping_matrix.rs  20_showcase_egui.rs  21_showcase_iced.rs  22_showcase_slint.rs  23_showcase_winit.rs  25_design_system_module.rs  arbitrary-values.html  backends.html  common.rs  demo-egui.rs  demo-iced.rs  demo-slint.rs  demo.rs  egui_demo_common.rs  index.html  responsive.html  showcase-egui.html  showcase-iced.html  showcase_slint_shared.rs  states.html  style-builder.html  themes.html  tokens.html
examples/iced_showcase/: docs_index.rs  main.rs  sidebar.rs  toc.rs
examples/iced_showcase/components/: mod.rs  snippet.rs
examples/iced_showcase/pages/: background_color.rs  borders.rs  buttons.rs  colors.rs  font_weight.rs  kitchen_sink.rs  layout.rs  layout_align_items.rs  layout_aspect_ratio.rs  layout_display.rs  layout_flex.rs  layout_flex_direction.rs  layout_gap.rs  layout_grid_template_columns.rs  layout_height.rs  layout_justify_content.rs  layout_max_width.rs  layout_object_fit.rs  layout_overflow.rs  layout_width.rs  margin.rs  mod.rs  motion.rs  oklch_demo.rs  semantic_colors.rs  shadows.rs  spacing.rs  style_builder.rs  text_align.rs  typography.rs
examples/iced_showcase/pages/real_world/: translator.rs
examples/iced_showcase/src/: aspect_test.rs
getting-started/: index.html  installation.html  migration-from-0.2.html  quick-start.html
reference/: index.html  public-api.html
src/: lib.rs  test.rs  traits.rs
src/backends/: aspect_ratio_node.rs  egui.rs  iced.rs  mod.rs  slint.rs
src/backends/iced/: convert.rs  mod.rs  widgets.rs
src/backends/iced/widgets/: common.rs  container.rs  conversions.rs  flex.rs  grid.rs  layout.rs  ratio_boxes.rs  tests.rs
src/components/: button.rs  mod.rs
src/style/: merge.rs  mod.rs  state.rs  style.rs
src/tokens/: aspect_ratio.rs  blur.rs  borders.rs  colors.rs  cursor.rs  mod.rs  motion.rs  oklch.rs  perspective.rs  semantic.rs  shadows.rs  spacing.rs  typography.rs
src/utilities/: layout.rs  mod.rs  spacing.rs
