[package]
name = "twill"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
description = "Idiomatic Rust styling library inspired by Tailwind CSS for GUI"
license = "MIT"
authors = ["FerrisMind"]
repository = "https://github.com/FerrisMind/twill"
homepage = "https://github.com/FerrisMind/twill"
documentation = "https://docs.rs/twill"
readme = "README.md"
keywords = ["styling", "tailwind", "gui", "egui", "iced"]
categories = ["gui", "rendering"]
exclude = [
    "docs/",
    "mdbook-build/",
    "PLAN.md",
    "README.RU.md",
    "README.PT_BR.md",
    ".github/",
]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
# Optional UI framework backends
egui = { version = "0.33", optional = true }
iced = { version = "0.14", optional = true, features = ["advanced", "image", "tokio"] }
slint = { version = "1.15", optional = true }

[dev-dependencies]
eframe = { version = "0.33", default-features = false, features = ["glow"] }
image = { version = "0.25", default-features = false, features = ["png"] }
regex = "1.12.3"

[features]
default = []
egui = ["dep:egui"]
iced = ["dep:iced"]
slint = ["dep:slint"]

[[example]]
name = "iced_showcase"
required-features = ["iced"]
