[workspace]
members = [
    "crates/twill-backend-common",
    "crates/twill-core",
    "crates/twill-egui",
    "crates/twill-iced",
    "crates/twill-slint",
]

[package]
name = "twill"
version = "0.3.0"
edition = "2024"
rust-version = "1.93"
autoexamples = false
description = "Idiomatic Rust styling library inspired by Tailwind for native GUI"
license = "MIT"
authors = ["FerrisMind"]
repository = "https://github.com/FerrisMind/twill"
documentation = "https://docs.rs/twill"
readme = "README.md"
keywords = ["styling", "tailwind", "gui", "egui", "iced"]
categories = ["gui", "rendering"]
exclude = [
    "docs/",
    "mdbook-build/",
    "PLAN.md",
    "README.RU.md",
    "README.PT_BR.md",
    ".github/",
]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
twill-backend-common = { path = "crates/twill-backend-common", version = "0.3.0" }
twill-core = { path = "crates/twill-core", version = "0.3.0" }
twill-egui = { path = "crates/twill-egui", version = "0.3.0", optional = true }
twill-iced = { path = "crates/twill-iced", version = "0.3.0", optional = true }
twill-slint = { path = "crates/twill-slint", version = "0.3.0", optional = true }

[dev-dependencies]
eframe = { version = "0.33", default-features = false, features = ["glow", "x11", "wayland"] }
iced = { version = "0.14", default-features = false, features = ["advanced", "image", "tokio", "canvas", "wgpu", "wayland", "x11"] }
image = { version = "0.25", default-features = false, features = ["png"] }
regex = "1.12.3"
slint = { version = "1.15", features = ["unstable-winit-030"] }

[features]
default = []
egui = ["dep:twill-egui"]
iced = ["dep:twill-iced"]
slint = ["dep:twill-slint"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "quick_start_card"
path = "examples/00_quick_start_card.rs"

[[example]]
name = "tokens"
path = "examples/01_tokens.rs"

[[example]]
name = "style_builder"
path = "examples/02_style_builder.rs"

[[example]]
name = "states"
path = "examples/03_states.rs"

[[example]]
name = "responsive"
path = "examples/04_responsive.rs"

[[example]]
name = "semantic_theme"
path = "examples/05_semantic_theme.rs"

[[example]]
name = "arbitrary_values"
path = "examples/06_arbitrary_values.rs"

[[example]]
name = "component_recipes"
path = "examples/07_component_recipes.rs"

[[example]]
name = "style_composition"
path = "examples/08_style_composition.rs"

[[example]]
name = "state_variants"
path = "examples/09_state_variants.rs"

[[example]]
name = "backend_egui"
path = "examples/10_backend_egui.rs"
required-features = ["egui"]

[[example]]
name = "backend_iced"
path = "examples/11_backend_iced.rs"
required-features = ["iced"]

[[example]]
name = "backend_slint"
path = "examples/12_backend_slint.rs"
required-features = ["slint"]

[[example]]
name = "backend_mapping_matrix"
path = "examples/13_backend_mapping_matrix.rs"
required-features = ["egui", "iced", "slint"]

[[example]]
name = "showcase_egui"
path = "examples/20_showcase_egui.rs"
required-features = ["egui"]

[[example]]
name = "showcase_iced"
path = "examples/21_showcase_iced.rs"
required-features = ["iced"]

[[example]]
name = "showcase_slint"
path = "examples/22_showcase_slint.rs"
required-features = ["slint"]

[[example]]
name = "showcase_winit"
path = "examples/23_showcase_winit.rs"
required-features = ["slint"]

[[example]]
name = "design_system_module"
path = "examples/25_design_system_module.rs"
