[package]
name = "twill-slint"
version = "0.3.0"
edition = "2024"
rust-version = "1.93"
description = "slint adapter crate for the Twill Rust styling ecosystem"
license = "MIT"
authors = ["FerrisMind"]
repository = "https://github.com/FerrisMind/twill"
documentation = "https://docs.rs/twill-slint"
readme = "README.md"
keywords = ["styling", "gui", "slint", "adapter", "rust"]
categories = ["gui", "rendering"]

[dependencies]
twill-core = { path = "../twill-core", version = "0.3.0" }
twill-backend-common = { path = "../twill-backend-common", version = "0.3.0" }
slint = "1.15"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
